--- a/styles.css
+++ b/styles.css
@@ -158,10 +158,15 @@
       background: var(--foreground);
     }
 
-    nav a {
-      text-decoration: none;
-      padding: 8px;
+    .tabs label {
+      display: block;
+      padding: 16px;
       background: var(--background);
+      cursor: pointer;
+    }
+
+    .editor input[type="radio"] {
+      display: none;
     }
 
     nav {
@@ -170,11 +175,17 @@
       background: var(--foreground);
     }
 
-    .editor:has(#html:focus) a[href="#html"],
-    .editor:has(#css:focus) a[href="#css"],
-    .editor:has(#js:focus) a[href="#js"] {
-      color: var(--active-text);
+    /* Style for the active tab */
+    .editor #tab-html:checked ~ nav .tabs label[for="tab-html"],
+    .editor #tab-css:checked ~ nav .tabs label[for="tab-css"],
+    .editor #tab-js:checked ~ nav .tabs label[for="tab-js"] {
       background: var(--active);
+    }
+
+    .editor #tab-html:checked ~ nav .tabs label[for="tab-html"] span,
+    .editor #tab-css:checked ~ nav .tabs label[for="tab-css"] span,
+    .editor #tab-js:checked ~ nav .tabs label[for="tab-js"] span {
+      color: var(--active-text);
     }
 
     .editor {
@@ -187,16 +198,25 @@
     }
 
     .panels {
-      scroll-snap-type: x mandatory;
-      overflow-x: auto;
-      display: flex;
+      overflow: hidden;
+      position: relative;
+      height: 100%;
     }
 
     .panels pre {
-      flex: 0 0 100%;
+      position: absolute;
+      width: 100%;
       height: 100%;
-      scroll-snap-align: start;
       outline: none;
+      display: none;
+      overflow-y: auto;
+    }
+
+    /* Show corresponding panel based on radio selection */
+    .editor #tab-html:checked ~ .panels #html,
+    .editor #tab-css:checked ~ .panels #css,
+    .editor #tab-js:checked ~ .panels #js {
+      display: block;
     }
 
     iframe {
@@ -211,7 +231,6 @@
     script[visible],
     style[visible],
     pre {
-      display: block;
       padding: 16px;
       white-space: pre;
       background: var(--foreground);
@@ -221,7 +240,7 @@
       tab-size: 2;
       color: var(--highlight-text);
       line-height: 1.6;
-      
+
       /* Disable spell-checking */
       spellcheck: false;
       -webkit-spell-check: none;
